// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/SnackbarBase/Title should renders correctly with titleFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#444B5A",
        "fontFamily": "Inter-Medium",
        "fontSize": 48,
        "lineHeight": 60,
      },
      [
        {
          "flex": 1,
          "paddingRight": 24,
        },
        {
          "backgroundColor": "#000",
        },
      ],
    ]
  }
>
  title two
</Text>
`;

exports[`@npm/mobydick-core/SnackbarBase/Title should renders correctly without titleFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFF",
        "fontFamily": "Inter-Medium",
        "fontSize": 42,
        "lineHeight": 54,
      },
      [
        {
          "flex": 1,
          "paddingRight": 24,
        },
        {
          "flex": 1,
        },
      ],
    ]
  }
>
  title
</Text>
`;
